# ds-salary-predict

./: .gitignore  README.md  lefthook.yml  pyproject.toml
.dvc/: config
app/: app.py
app/models/: predict.py
data/processed/: .gitignore  salaries_preprocessed.csv.dvc
data/raw/: .gitignore  imf-world-gdp.csv.dvc  iso-country-codes.csv.dvc  salaries.csv.dvc
notebooks/: 0-data-exploration.ipynb  1-data-preprocessing.ipynb  1-eda-and-feature-engineer.ipynb
src/ds_salaries_predict/: __init__.py  config.py  preprocess.py
webapp/: app.py
