[project]
name = "ds_salaries_predict"
version = "0.1.0"
description = "Predicting Salaries of Data Scientists"
authors = [{ name = "Promchai Chooseang" }, { name = "Pannatorn Sriwongpan" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
    "ipykernel>=6.29.5",
    "ds-salaries-predict",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"] # Add import sorting

[tool.uv.sources]
ds-salaries-predict = { workspace = true }
