[project]
name = "ds_salaries_predict"
version = "0.1.0"
description = "Predicting Salaries of Data Scientists"
authors = [{ name = "Promchai Chooseang" }, { name = "Pannatorn Sriwongpan" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
eda = ["dython>=0.7.9", "seaborn>=0.13.2"]

dev = [
    "ruff>=0.11.10",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "poethepoet>=0.34.0",
    "lefthook>=1.11.13",
]

docs = ["pdoc>=15.0.3"]

[tool.ruff]
indent-width = 4
line-length = 100
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"] # Add import sorting

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"
